Adding faculty details complete.

--- a/app/src/main/res/layout/activity_add_teacher.xml
+++ b/app/src/main/res/layout/activity_add_teacher.xml
@@ -1,4 +1,4 @@
- <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,7 +15,7 @@
          <de.hdodenhof.circleimageview.CircleImageView
              android:layout_width="120dp"
              android:layout_height="120dp"
-             android:id="@+id/teacherCircleImage"
+             android:id="@+id/teacherCircleImageClickToAddImg"
              android:src="@drawable/user"
              android:layout_gravity="center"
              android:layout_marginTop="36dp"/>
@@ -30,8 +30,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/teacherNameField"
+                android:inputType="text"
                 android:hint="@string/Name" />
+        </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="16dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/teacherEmailField"
+                android:inputType="textEmailAddress"
+                android:hint="@string/Email" />
+        </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="16dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/teacherPostField"
+                android:inputType="text"
+                android:hint="@string/Post" />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/facultyDepartmentSpinner"
+            android:spinnerMode="dropdown"
+            android:background="@android:drawable/btn_dropdown"
+            android:gravity="center"
+            android:layout_marginVertical="16dp"/>
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="match_parent"
