--- a/app/src/main/res/layout/faculty_info_layout_card.xml
+++ b/app/src/main/res/layout/faculty_info_layout_card.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="20dp"
     android:layout_margin="4dp">
 
     <LinearLayout
