--- a/app/src/main/res/layout/activity_update_and_add_faculty.xml
+++ b/app/src/main/res/layout/activity_update_and_add_faculty.xml
@@ -176,6 +176,45 @@
 
             </LinearLayout>
 
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/Artificial_Intelligence_and_Data_Science"
+                android:gravity="center"
+                android:textSize="22sp"
+                android:paddingHorizontal="50dp"
+                android:textColor="@color/textColour"
+                android:textStyle="bold"
+                android:layout_marginTop="18dp"/>
+
+            <!--           Using simply a view to show a line below dept. name-->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginVertical="8dp"
+                android:background="#c1c1c1"/>
+
+
+            <!--                Disable scrolling here cause already using nested scroll view and scrolling is not required here-->
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:id="@+id/ADFacultyRecycler"
+                android:nestedScrollingEnabled="false"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:id="@+id/ADfacultyDataNotFound">
+
+                <include layout="@layout/no_data_available_card"/>
+
+            </LinearLayout>
+
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
