Splash Screen. User Registration and type segregation.

--- a/app/src/main/res/layout/activity_check_permission_to_request_otpactivity.xml
+++ b/app/src/main/res/layout/activity_check_permission_to_request_otpactivity.xml
@@ -8,9 +8,9 @@
     android:layout_gravity="center"
     tools:context=".userAuthentication.CheckPermissionToRequestOTPActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
         android:src="@drawable/sit_logo"/>
