--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/mainActivity"
+    android:visibility="visible"
     tools:context=".MainActivity"
     android:orientation="vertical">
     
@@ -43,6 +45,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:layout_marginTop="10dp"
                     android:padding="5dp"
                     android:text="@string/Upload_Feed"
@@ -59,7 +63,7 @@
             android:layout_height="150dp"
             android:layout_margin="10dp"
             app:cardElevation="5dp"
-            android:id="@+id/addGalleryImageCard">
+            android:id="@+id/deleteFeedCard">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -67,32 +71,35 @@
                 android:orientation="vertical"
                 android:gravity="center">
 
-               <ImageView
-                   android:layout_width="64dp"
-                   android:layout_height="64dp"
-                   android:background="@drawable/circular_upload_image_icon_background"
-                   android:src="@drawable/ic_upload_photo_to_gallery"
-                   android:padding="15dp"/>
+                <ImageView
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:background="@drawable/circular_delete_notice_icon_background"
+                    android:src="@drawable/ic_delete_feed"
+                    android:padding="15dp"/>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/lightGrey"
-                        android:layout_marginTop="10dp"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/lightGrey"
+                    android:layout_marginTop="10dp"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/Upload_Image_To_Gallery"
-                        android:textStyle="bold"
-                        android:padding="5dp"
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/textColour"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:text="@string/Remove_Feed"
+                    android:textStyle="bold"
+                    android:padding="5dp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/textColour"/>
 
 
             </LinearLayout>
 
         </com.google.android.material.card.MaterialCardView>
+
 
     </LinearLayout>
 
@@ -100,6 +107,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:id="@+id/hideForStudent"
         android:gravity="center"
         android:layout_margin="5dp">
 
@@ -197,7 +205,7 @@
             android:layout_height="150dp"
             android:layout_margin="10dp"
             app:cardElevation="5dp"
-            android:id="@+id/deleteFeedCard">
+            android:id="@+id/addGalleryImageCard">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -205,27 +213,29 @@
                 android:orientation="vertical"
                 android:gravity="center">
 
-               <ImageView
-                   android:layout_width="64dp"
-                   android:layout_height="64dp"
-                   android:background="@drawable/circular_delete_notice_icon_background"
-                   android:src="@drawable/ic_delete_feed"
-                   android:padding="15dp"/>
+                <ImageView
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:background="@drawable/circular_upload_image_icon_background"
+                    android:src="@drawable/ic_upload_photo_to_gallery"
+                    android:padding="15dp"/>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/lightGrey"
-                        android:layout_marginTop="10dp"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/lightGrey"
+                    android:layout_marginTop="10dp"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/Remove_Feed"
-                        android:textStyle="bold"
-                        android:padding="5dp"
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/textColour"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Upload_Image_To_Gallery"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/textColour"/>
 
 
             </LinearLayout>
