--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -14,15 +14,13 @@
         android:visibility="invisible"
         android:layout_centerInParent="true"/>
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/sitLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:civ_border_width="2dp"
         android:src="@drawable/sit_logo"
         android:layout_marginTop="120dp"
-        android:layout_centerHorizontal="true"
-        app:civ_border_color="#FF000000"/>
+        android:layout_centerHorizontal="true"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,15 +39,16 @@
             android:text="@string/OTP_Instruction"
             android:textSize="18sp"
             android:textStyle="bold"/>
+
         <TextView
+            android:id="@+id/phoneNumberDisplay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/phoneNumberDisplay"
-            android:text="Phone no. comes here"
             android:layout_gravity="center"
+            android:text="Phone no. not found"
             android:textColor="@color/red2"
             android:textSize="15sp"
-            android:textStyle="bold"/>
+            android:textStyle="italic" />
 
         <EditText
             android:id="@+id/otpField"
@@ -70,7 +69,7 @@
                 android:id="@+id/resendOTP"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.5"
+                android:layout_weight="1"
                 android:layout_marginTop="10dp"
                 android:visibility="invisible"
                 android:gravity="center"
@@ -80,10 +79,21 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:id="@+id/getOtp"
+                android:text="@string/Get_OTP"
+                android:textAllCaps="false"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:id="@+id/countdownTimer"
+                android:textColor="#000000"
                 android:hint="@string/Counter_Hint"
                 android:layout_marginTop="10dp"
-                android:layout_weight="1.5"
+                android:layout_weight="1"
                 android:gravity="center"/>
 
 
@@ -98,6 +108,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/verifyBtn"
         android:layout_below="@+id/otpAndOtherContainer"
+        android:textAllCaps="false"
         android:text="@string/Verify_OTP"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"/>
